osha.theme Changelog
====================


1.2.45 (2009-11-16)
-------------------

- in the rss template now show the context url instead of the portal url as base for the feed. Prepares the fix for #304 (pilz)
- display:none for the filed under text on the blog entry (pilz)
- remove unnecessary (and potentially harmful) condition:contact from pressroom template (thomasw)
- fixed oshnetwork links to practical-solutions (deroiste)

1.2.44 (2009-11-09)
-------------------

- changed rss-feeds to use the addthis button - work for ticket 418  (pilz)
- Added new country flags for OSHNetwork (deroiste)
- Various css and minor template tweaks to Topics and Practical Solutions and
  Legislation views #374, #375, #376, #414 (deroiste)


1.2.43 (2009-10-27)
-------------------

- Added new napo film  rels to #364 (pilz)
- vastly extended the help text on how to search for collections by "path:", plus added a hard link to
  http://osha.europa.eu/directory; ticket 396 (thomasw) 

1.2.42 (2009-10-25)
-------------------

- updated addthis code (pilz)
- added rss icon to blog view (pilz)


1.2.41 (2009-10-25)
-------------------

- Nothing changed yet.


1.2.40 (2009-10-25)
-------------------

- oshaview: fixed a bug introduced in revision 1835 that prevented any keyword from being 
  displayed in the HTML header;  Also, keywords from the Subject list are now properly translated (thomasw)
- fixed accessibility problem where p must not appear within a span. This is due to the fact that the agency requires html rendering for descriptions. (pilz)
- fixed additional CSS Bugs based on the Carsa report (pilz)
- added flashobject.js (pilz)
- converted flash portlet to use flashobject.js to load the film (pilz)


1.2.39 (2009-10-21)
-------------------

- Various tweaks to the Cleaning Workers / Topics SEP, Practical Solutions
  Advanced search field #375 #376 #409 (deroiste)
- i18n for "questions in parliament / BeSWIC" (thomasw)

1.2.38 (2009-10-20)
-------------------
